ASP/CRM microservices architecture/crm-microservices/k8s/services-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: crm-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: localhost:5000/crm-microservices-authservice:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-service
  namespace: crm-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-service
  template:
    metadata:
      labels:
        app: client-service
    spec:
      containers:
      - name: client-service
        image: localhost:5000/crm-microservices-clientservice:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: crm-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: localhost:5000/crm-microservices-orderservice:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  namespace: crm-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
      - name: task-service
        image: localhost:5000/crm-microservices-taskservice:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twilio-service
  namespace: crm-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twilio-service
  template:
    metadata:
      labels:
        app: twilio-service
    spec:
      containers:
      - name: twilio-service
        image: localhost:5000/crm-microservices-twilioservice:latest
        ports:
        - containerPort: 80
