ASP/CRM microservices architecture/crm-microservices/k8s/apigateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
  namespace: crm-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
      - name: apigateway
        image: crm-microservices-apigateway:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  namespace: crm-system
spec:
  type: NodePort 
  selector:
    app: apigateway
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
